--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -19,9 +21,10 @@
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
+    "gh-pages": "^6.3.0",
     "typescript": "^4.9.5"
   },
-  "homepage": ".",
+  "homepage": "https://dhruvcharan.github.io/Personal-website",
   "license": "MIT",
   "browserslist": {
     "production": [
